Fix spacing on bullets.

--- a/jujugui/static/gui/src/app/components/entity-header/_entity-header.scss
+++ b/jujugui/static/gui/src/app/components/entity-header/_entity-header.scss
@@ -26,7 +26,6 @@
     }
 
     ul.bullets {
-        margin-top: 0;
         li {
             &:after {
                 color: $warm-grey;
